# inside-vectordb

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
notebooks/: .env.example  000-get_data.py  001-get_embeddings.py  002-brute_force_similarity.py  003-hnswlib_demo.py  004-faiss_demo.py  005-compare_benchmarks.py  006-layer_assignment.py  utils.py
reports/: brute_force_20251002_165419.json  brute_force_20251002_165814.json  brute_force_20251002_170137.json
reports/brute_force/: brute_force_20251002_132738.json
reports/faiss/: faiss_hnsw_20251002_150847.json
reports/hnswlib/: hnswlib_20251002_142344.json  hnswlib_20251002_184417.json
reports/summary/: BENCHMARK_SUMMARY.txt
